crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply_json__test__append_empty_search.snap
---
source: crates/forge_app/src/tools/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->foo
<!-- REPLACEMENTS -->
<!-- SEARCH -->
<!-- REPLACE --> bar
<!-- FINAL -->foo bar
