crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply_json__test__delete_empty_replace.snap
---
source: crates/forge_app/src/tools/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->foo bar baz
<!-- REPLACEMENTS -->
<!-- SEARCH -->bar 
<!-- REPLACE -->
<!-- FINAL -->foo baz
