crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply_json__test__emoji_replacement.snap
---
source: crates/forge_app/src/tools/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->Hi 👋, how are you?
<!-- REPLACEMENTS -->
<!-- SEARCH -->👋
<!-- REPLACE -->👍
<!-- FINAL -->Hi 👍, how are you?
