crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply_json__test__empty_search_text.snap
---
source: crates/forge_app/src/tools/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->
<!-- REPLACEMENTS -->
<!-- SEARCH -->
<!-- REPLACE -->foo
<!-- FINAL -->foo
