crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply_json__test__exact_match_single_word.snap
---
source: crates/forge_app/src/tools/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->Hello World
<!-- REPLACEMENTS -->
<!-- SEARCH -->World
<!-- REPLACE -->Forge
<!-- FINAL -->Hello Forge
