crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply_json__test__exact_threshold_match.snap
---
source: crates/forge_app/src/tools/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->foox
<!-- REPLACEMENTS -->
<!-- SEARCH -->foo
<!-- REPLACE -->bar
<!-- FINAL -->barx
