crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply_json__test__fuzzy_match_hyphenated_pattern.snap
---
source: crates/forge_app/src/tools/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->abc foobar pqr
<!-- REPLACEMENTS -->
<!-- SEARCH -->foo-bar
<!-- REPLACE -->replaced
<!-- FINAL -->abc replaced pqr
