crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply_json__test__fuzzy_match_with_extra_characters.snap
---
source: crates/forge_app/src/tools/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->fooo bar
<!-- REPLACEMENTS -->
<!-- SEARCH -->foo
<!-- REPLACE -->baz
<!-- FINAL -->bazo bar
