crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply_json__test__fuzzy_match_with_prefix.snap
---
source: crates/forge_app/src/tools/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->foox baz foo
<!-- REPLACEMENTS -->
<!-- SEARCH -->afoo
<!-- REPLACE -->bar
<!-- FINAL -->foox baz bar
