crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply_json__test__mixed_unicode_ascii.snap
---
source: crates/forge_app/src/tools/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->Hello 世界 World
<!-- REPLACEMENTS -->
<!-- SEARCH -->世界 World
<!-- REPLACE -->地球
<!-- FINAL -->Hello 地球
